@@ -9,7 +9,7 @@
   <varlistentry>
     <term><command><option>-a </option></command><option>ALIGNMENT</option></term>
     <listitem>
-      Text alignment on screen, {top,bottom}_{left,right}
+      Text alignment on screen, {top,bottom}_{left,right} or none
     <para></para></listitem>
   </varlistentry>
   
