@@ -3,6 +3,7 @@
 2005-08-20
 	* Applied patch from zimba-tm, closes patch 1260225
 	* Fixed ugly gradient bug.  closes bug 1255608
+	* Added $voffset
 
 2005-08-12
 	* Multiple unit additions and modifications
